# mlir-heir

./: CMakeLists.txt  README.md
cmake/: MLIRHeir.cmake
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h  PolyToStandard.td
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyPatterns.td  PolyTraits.h  PolyTypes.h  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h  CMakeLists.txt  Passes.h  Passes.td
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  Passes.h  Passes.td
tests/: CMakeLists.txt  affine_loop_unroll.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  ctlz.mlir  ctlz_runner.mlir  lit.cfg.py  lit.site.cfg.py.in  mul_to_add.mlir  poly_canonicalize.mlir  poly_syntax.mlir  poly_to_llvm.mlir  poly_to_standard.mlir  poly_verifier.mlir  sccp.mlir
tools/: CMakeLists.txt  heir-opt.cpp
